--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,43 @@ ul, ol, menu{
     list-style: none;
 }
 
+/* Layout */
 .container{
     margin: 0 auto;
-    max-width: 1024px;
+    max-width: 900px;
 }
+
+/* Header */
+.main-header{
+    background-color: aqua;
+    padding: 20px;
+}
+
+
+.row{
+    display: flex;
+    
+}
+
+.col-20{
+    width: 20%;
+}
+
+.col-60{
+    width: 60%;
+}
+
+/* Debug */
+.debug .column{
+    border: 2px dashed black;
+}
+
+.debug .main-header .column{
+    padding: 20px;
+    background-color: yellow;
+   
+
+}
+        
+
+
