--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,13 @@ ul, ol, menu{
 
 .main-header{
     background-color: aqua;
-    padding: 20px;
 }
 
 
 .row{
     display: flex;
     justify-content: center;
+    padding: 20px;
 }
 
 .row-reverse{
@@ -63,6 +63,20 @@ ul, ol, menu{
 .grey-section{
     padding: 20px;
     background-color: grey;
+}
+
+footer{
+    background-color: black;
+}
+
+.col-2{
+    width: calc(100% / 3);
+
+}
+
+.col-1{
+    width: calc(100% / 6);
+
 }
 
 /* Debug */
@@ -110,4 +124,13 @@ ul, ol, menu{
 
 }
 
+.debug .col-2{
+    background-color: red;
+    min-height: 300px;
+}
+
+.debug .col-1{
+    background-color: lightgreen;
+    min-height: 300px;
+}
 
