--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,16 @@ ul, ol, menu{
 .row{
     display: flex;
     justify-content: center;
-    padding: 20px;
+    padding: 20px 0;
 }
 
-.row .row-reverse{
+
+.footer-row{
     display: flex;
-    justify-content: center;
-    flex-direction: row-reverse;
+    align-items: center;
+    margin-top: 20px;
+    justify-content: space-between;
+    min-height: 100px;
 }
 
 .col-20{
@@ -85,6 +88,7 @@ footer{
 
 }
 
+
 /* Debug */
 .debug .column{
     border: 2px dashed black;
@@ -126,7 +130,7 @@ footer{
 .debug .grey-section .col-100{
     background-color: green;
     min-height: 1000px;
-    max-width: 800px;
+    
 
 }
 
@@ -138,5 +142,16 @@ footer{
 .debug .col-1{
     background-color: lightgreen;
     min-height: 300px;
+}
+
+.debug .footer-row{
+    background-color: aquamarine;
+}
+
+.debug .item{
+    border: 2px dashed black;
+    background-color: orange;
+    padding: 5px;
+   
 }
 
